--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+* {
+  position: relative;
+}
+
+html, body {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
 .App {
   text-align: center;
 }
